# email_processor_agent

./: .env.example  .gitignore  AUTOMATION_GUIDE.md  EMAIL_APPROVAL_GUIDE.md  README.md  approval_server.py  automation.py  demo_jinja2_templates.py  email_auto_responder.py  email_auto_responder_poml.py  email_guardrails.py  list_models.py  pending_approvals.json  pyproject.toml  run_email_workflow.py
email_outputs/: discrepancy_email.html  discrepancy_email.txt  regular_email.html  regular_email.txt
examples/: usage_examples.py
prompts/: email_analysis.poml  email_response.poml
src/email_processor/: __init__.py  agent.py  approval_workflow.py  cli.py  config.py  email_analyser.py  email_generator.py  email_templates.py  imap_client.py  models.py  smtp_client.py
templates/: discrepancy_email.html  regular_email.html
ui/: app.js  approval.html  styles.css
