[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-processor-agent"
version = "1.0.0"
description = "AI-powered Email Processor Agent with Email Generator and Analyser"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Email Processor Agent", email = "agent@example.com"}
]
keywords = ["email", "ai", "agent", "gmail", "imap", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "imapclient>=2.3.1",
    "email-validator>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "aiosmtplib>=3.0.0",
    "aioimaplib>=1.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "poml>=0.0.8",
    "guardrails-ai>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
email-agent = "email_processor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
